# Meeting-Summarizer

./: .gitignore  README.md  pyproject.toml
summarizer-app/: .env  app.py  requirements.txt
text_summarizer_using_Gemini_API-main/text_summarizer_using_Gemini_API-main/: app.py
